--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -142,7 +142,7 @@
                 <p>Description for category 2.</p>
             </div>
             <div class="category">
-                <h3>Category 3</h3>
+                <h3>division 3</h3>
                 <p>Description for category 3.</p>
             </div>
             <div class="category">
